[package]
name = "tracing-datadog"
version = "0.1.0"
authors = ["David Calavera <david.calavera@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
datadog-apm = "0.2"
rand = "0.7"
tracing = "0.1"
tracing-distributed = "0.2"